Extension/3-admission-controller/dynamiques/demo-validating/ressources-kube/pod-non-conformant.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-non-conformant
  namespace: admission-controllers
  labels:
    app: test
spec:
  containers:
  - name: nginx
    image: nginx
