Extension/3-admission-controller/dynamiques/demo-validating/ressources-kube/service-admission-webhook.yaml
# service-admission-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-webhook
  namespace: admission-controllers
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: admission-webhook
