Extension/3-admission-controller/dynamiques/demo-validating/ressources-kube/validating-webhook-configuration.yaml
# validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
webhooks:
- name: validating.webhook.admission
  clientConfig:
    service:
      name: admission-webhook
      namespace: admission-controllers
      path: "/validate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVZEZoZHI1YlVDbFpLNEZHV0ZXUXcrdXFLU1RFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0Z6RVZNQk1HQTFVRUF3d01ZV1J0YVhOemFXOXVYMk5oTUNBWERUSTBNRFl3T0RFM016a3lORm9ZRHpJdwpOVEV4TURJMU1UY3pPVEkwV2pBWE1SVXdFd1lEVlFRRERBeGhaRzFwYzNOcGIyNWZZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXWHBqamVpRkdKTGcxOTk4REZCRkFDbHlvSWNEN2ZuNVoKZGt3TGxlUDY1ck9saHk5VnVVa1BZd0ZVc2lWRW5NbkdRVVdBUnJMKzJCK0FBSVN0UzhjZWtGNUpRek1iaGtZSwpYMU56eDBTUXVPND [...]
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
